--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -197,7 +197,25 @@
     "show": "Montrer",
     "download_calendar": "Télécharger le calendrier",
     "md_instructions": "Écrivez votre démarque ici...",
-    "preview": "Aperçu"
+    "preview": "Aperçu",
+    "checklist_delete_confirm": "Êtes-vous sûr de vouloir supprimer cette liste de contrôle ? \nCette action ne peut pas être annulée.",
+    "clear_location": "Effacer l'emplacement",
+    "date_information": "Informations sur les dates",
+    "delete_checklist": "Supprimer la liste de contrôle",
+    "delete_note": "Supprimer la note",
+    "delete_transportation": "Supprimer le transport",
+    "end": "Fin",
+    "ending_airport": "Aéroport de fin",
+    "flight_information": "Informations sur le vol",
+    "from": "Depuis",
+    "no_location_found": "Aucun emplacement trouvé",
+    "note_delete_confirm": "Êtes-vous sûr de vouloir supprimer cette note ? \nCette action ne peut pas être annulée.",
+    "out_of_range": "Pas dans la plage de dates de l'itinéraire",
+    "show_region_labels": "Afficher les étiquettes de région",
+    "start": "Commencer",
+    "starting_airport": "Aéroport de départ",
+    "to": "À",
+    "transportation_delete_confirm": "Etes-vous sûr de vouloir supprimer ce transport ? \nCette action ne peut pas être annulée."
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -364,7 +382,9 @@
     "item_cannot_be_empty": "L'élément ne peut pas être vide",
     "items": "Articles",
     "new_item": "Nouvel article",
-    "save": "Sauvegarder"
+    "save": "Sauvegarder",
+    "checklist_viewer": "Visionneuse de liste de contrôle",
+    "new_checklist": "Nouvelle liste de contrôle"
   },
   "collection": {
     "collection_created": "Collection créée avec succès !",
@@ -373,7 +393,8 @@
     "edit_collection": "Modifier la collection",
     "error_creating_collection": "Erreur lors de la création de la collection",
     "error_editing_collection": "Erreur lors de la modification de la collection",
-    "new_collection": "Nouvelle collection"
+    "new_collection": "Nouvelle collection",
+    "public_collection": "Collection publique"
   },
   "notes": {
     "add_a_link": "Ajouter un lien",
@@ -386,7 +407,8 @@
     "note_public": "Cette note est publique car elle fait partie d'une collection publique.",
     "open": "Ouvrir",
     "save": "Sauvegarder",
-    "invalid_url": "URL invalide"
+    "invalid_url": "URL invalide",
+    "note_viewer": "Visionneuse de notes"
   },
   "transportation": {
     "date_time": "Date de début",
