--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -197,7 +197,25 @@
     "show": "Visa",
     "download_calendar": "Ladda ner kalender",
     "md_instructions": "Skriv din avskrivning här...",
-    "preview": "Förhandsvisning"
+    "preview": "Förhandsvisning",
+    "checklist_delete_confirm": "Är du säker på att du vill ta bort den här checklistan? \nDenna åtgärd kan inte ångras.",
+    "clear_location": "Rensa plats",
+    "date_information": "Datuminformation",
+    "delete_checklist": "Ta bort checklista",
+    "delete_note": "Ta bort anteckning",
+    "delete_transportation": "Ta bort Transport",
+    "end": "Avsluta",
+    "ending_airport": "Slutar flygplats",
+    "flight_information": "Flyginformation",
+    "from": "Från",
+    "no_location_found": "Ingen plats hittades",
+    "note_delete_confirm": "Är du säker på att du vill ta bort den här anteckningen? \nDenna åtgärd kan inte ångras.",
+    "out_of_range": "Inte inom resplanens datumintervall",
+    "show_region_labels": "Visa regionetiketter",
+    "start": "Start",
+    "starting_airport": "Startar flygplats",
+    "to": "Till",
+    "transportation_delete_confirm": "Är du säker på att du vill ta bort denna transport? \nDenna åtgärd kan inte ångras."
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -364,7 +382,9 @@
     "item_cannot_be_empty": "Objektet får inte vara tomt",
     "items": "Föremål",
     "new_item": "Nytt föremål",
-    "save": "Spara"
+    "save": "Spara",
+    "checklist_viewer": "Checklista Viewer",
+    "new_checklist": "Ny checklista"
   },
   "collection": {
     "collection_created": "Samlingen har skapats!",
@@ -373,7 +393,8 @@
     "edit_collection": "Redigera samling",
     "error_creating_collection": "Det gick inte att skapa samlingen",
     "error_editing_collection": "Fel vid redigering av samling",
-    "new_collection": "Ny samling"
+    "new_collection": "Ny samling",
+    "public_collection": "Offentlig samling"
   },
   "notes": {
     "add_a_link": "Lägg till en länk",
@@ -386,7 +407,8 @@
     "note_public": "Den här anteckningen är offentlig eftersom den finns i en offentlig samling.",
     "open": "Öppna",
     "save": "Spara",
-    "invalid_url": "Ogiltig URL"
+    "invalid_url": "Ogiltig URL",
+    "note_viewer": "Note Viewer"
   },
   "transportation": {
     "date_and_time": "Datum",
