feat: enhance AdventureImage model with custom upload path and add latitude/longitude fields to Country model

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -231,6 +231,7 @@
 		"to": "To",
 		"start": "Start",
 		"end": "End",
+		"show_map": "Show Map",
 		"emoji_picker": "Emoji Picker",
 		"download_calendar": "Download Calendar",
 		"date_information": "Date Information",
