feat: implement Immich integration with CRUD API, add serializer, and enhance frontend components

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -509,6 +509,7 @@
 		"query_required": "Query is required",
 		"server_down": "The Immich server is currently down or unreachable",
 		"no_items_found": "No items found",
-		"imageid_required": "Image ID is required"
+		"imageid_required": "Image ID is required",
+		"load_more": "Load More"
 	}
 }
