--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -215,7 +215,8 @@
     "start": "Inizio",
     "starting_airport": "Inizio aeroporto",
     "to": "A",
-    "transportation_delete_confirm": "Sei sicuro di voler eliminare questo trasporto? \nQuesta azione non può essere annullata."
+    "transportation_delete_confirm": "Sei sicuro di voler eliminare questo trasporto? \nQuesta azione non può essere annullata.",
+    "show_map": "Mostra mappa"
   },
   "home": {
     "desc_1": "Scopri, pianifica ed esplora con facilità",
@@ -500,5 +501,28 @@
     "total_adventures": "Avventure totali",
     "total_visited_regions": "Totale regioni visitate",
     "welcome_back": "Bentornato"
+  },
+  "immich": {
+    "api_key": "Chiave API Immich",
+    "api_note": "Nota: questo deve essere l'URL del server API Immich, quindi probabilmente termina con /api a meno che tu non abbia una configurazione personalizzata.",
+    "disable": "Disabilita",
+    "enable_immich": "Abilita Immich",
+    "imageid_required": "L'ID immagine è obbligatorio",
+    "immich": "Immich",
+    "immich_desc": "Integra il tuo account Immich con AdventureLog per consentirti di cercare nella tua libreria di foto e importare foto per le tue avventure.",
+    "immich_disabled": "Integrazione Immich disabilitata con successo!",
+    "immich_enabled": "Integrazione Immich abilitata con successo!",
+    "immich_error": "Errore durante l'aggiornamento dell'integrazione Immich",
+    "immich_integration": "Integrazione di Immich",
+    "immich_updated": "Impostazioni Immich aggiornate con successo!",
+    "integration_enabled": "Integrazione abilitata",
+    "integration_fetch_error": "Errore durante il recupero dei dati dall'integrazione Immich",
+    "integration_missing": "L'integrazione Immich manca dal backend",
+    "load_more": "Carica altro",
+    "no_items_found": "Nessun articolo trovato",
+    "query_required": "La domanda è obbligatoria",
+    "server_down": "Il server Immich è attualmente inattivo o irraggiungibile",
+    "server_url": "URL del server Immich",
+    "update_integration": "Aggiorna integrazione"
   }
 }
