--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -215,7 +215,8 @@
     "starting_airport": "Startende luchthaven",
     "to": "Naar",
     "transportation_delete_confirm": "Weet u zeker dat u dit transport wilt verwijderen? \nDeze actie kan niet ongedaan worden gemaakt.",
-    "ending_airport": "Einde luchthaven"
+    "ending_airport": "Einde luchthaven",
+    "show_map": "Toon kaart"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -500,5 +501,28 @@
     "total_adventures": "Totale avonturen",
     "total_visited_regions": "Totaal bezochte regio's",
     "welcome_back": "Welkom terug"
+  },
+  "immich": {
+    "api_key": "Immich API-sleutel",
+    "api_note": "Let op: dit moet de URL naar de Immich API-server zijn, dus deze eindigt waarschijnlijk op /api, tenzij je een aangepaste configuratie hebt.",
+    "disable": "Uitzetten",
+    "enable_immich": "Schakel Immich in",
+    "imageid_required": "Afbeeldings-ID is vereist",
+    "immich": "Immich",
+    "immich_desc": "Integreer uw Immich-account met AdventureLog zodat u in uw fotobibliotheek kunt zoeken en foto's voor uw avonturen kunt importeren.",
+    "immich_disabled": "Immich-integratie succesvol uitgeschakeld!",
+    "immich_enabled": "Immich-integratie succesvol ingeschakeld!",
+    "immich_error": "Fout bij updaten van Immich-integratie",
+    "immich_integration": "Immich-integratie",
+    "immich_updated": "Immich-instellingen zijn succesvol bijgewerkt!",
+    "integration_enabled": "Integratie ingeschakeld",
+    "integration_fetch_error": "Fout bij het ophalen van gegevens uit de Immich-integratie",
+    "integration_missing": "De Immich-integratie ontbreekt in de backend",
+    "load_more": "Laad meer",
+    "no_items_found": "Geen artikelen gevonden",
+    "query_required": "Er is een zoekopdracht vereist",
+    "server_down": "De Immich-server is momenteel offline of onbereikbaar",
+    "server_url": "Immich-server-URL",
+    "update_integration": "Integratie bijwerken"
   }
 }
