--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -215,7 +215,8 @@
     "start": "Start",
     "starting_airport": "Startflughafen",
     "to": "Zu",
-    "transportation_delete_confirm": "Sind Sie sicher, dass Sie diesen Transport löschen möchten? \nDiese Aktion kann nicht rückgängig gemacht werden."
+    "transportation_delete_confirm": "Sind Sie sicher, dass Sie diesen Transport löschen möchten? \nDiese Aktion kann nicht rückgängig gemacht werden.",
+    "show_map": "Karte anzeigen"
   },
   "home": {
     "desc_1": "Entdecken, planen und erkunden Sie mit Leichtigkeit",
@@ -500,5 +501,28 @@
     "total_adventures": "Totale Abenteuer",
     "total_visited_regions": "Insgesamt besuchte Regionen",
     "welcome_back": "Willkommen zurück"
+  },
+  "immich": {
+    "api_key": "Immich-API-Schlüssel",
+    "api_note": "Hinweis: Dies muss die URL zum Immich-API-Server sein, daher endet sie wahrscheinlich mit /api, es sei denn, Sie haben eine benutzerdefinierte Konfiguration.",
+    "disable": "Deaktivieren",
+    "enable_immich": "Immich aktivieren",
+    "imageid_required": "Bild-ID ist erforderlich",
+    "immich": "Immich",
+    "immich_desc": "Integrieren Sie Ihr Immich-Konto mit AdventureLog, damit Sie Ihre Fotobibliothek durchsuchen und Fotos für Ihre Abenteuer importieren können.",
+    "immich_disabled": "Immich-Integration erfolgreich deaktiviert!",
+    "immich_enabled": "Immich-Integration erfolgreich aktiviert!",
+    "immich_error": "Fehler beim Aktualisieren der Immich-Integration",
+    "immich_updated": "Immich-Einstellungen erfolgreich aktualisiert!",
+    "integration_enabled": "Integration aktiviert",
+    "integration_fetch_error": "Fehler beim Abrufen der Daten aus der Immich-Integration",
+    "integration_missing": "Im Backend fehlt die Immich-Integration",
+    "load_more": "Mehr laden",
+    "no_items_found": "Keine Artikel gefunden",
+    "query_required": "Abfrage ist erforderlich",
+    "server_down": "Der Immich-Server ist derzeit ausgefallen oder nicht erreichbar",
+    "server_url": "Immich-Server-URL",
+    "update_integration": "Update-Integration",
+    "immich_integration": "Immich-Integration"
   }
 }
