--- a/frontend/src/locales/es.json
+++ b/frontend/src/locales/es.json
@@ -467,17 +467,7 @@
     "no_shared_found": "No se encontraron colecciones que se compartan contigo.",
     "set_public": "Para permitir que los usuarios compartan contenido con usted, necesita que su perfil esté configurado como público."
   },
-  "languages": {
-    "de": "Alemán",
-    "en": "Inglés",
-    "es": "Español",
-    "fr": "Francés",
-    "it": "italiano",
-    "nl": "Holandés",
-    "sv": "sueco",
-    "zh": "Chino",
-    "pl": "Polaco"
-  },
+  "languages": {},
   "profile": {
     "member_since": "Miembro desde",
     "user_stats": "Estadísticas de usuario",
